add data + app.py
Co-authored-by: mgbatista <maiara.27bueno@gmail.com>

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,85 @@
+ace
+altair
+asttokens
+attrs
+backcall
+blinker
+cachetools
+certifi
+charset-normalizer
+click
+comm
+contourpy
+cycler
+debugpy
+decorator
+executing
+fonttools
+gitdb
+GitPython
+idna
+imbalanced-learn
+imblearn
+importlib-metadata
+importlib-resources
+ipykernel
+ipython
+jedi
+jinja2
+joblib
+jsonschema
+jsonschema-specifications
+jupyter-client
+jupyter-core
+kiwisolver
+markdown-it-py
+MarkupSafe
+matplotlib
+matplotlib-inline
+mdurl
+narwhals
+nest-asyncio
+numpy
+packaging
+panda
+pandas
+parso
+pexpect
+pickleshare
+pillow
+pkgutil-resolve-name
+platformdirs
+prompt-toolkit
+protobuf
+psutil
+ptyprocess
+pure-eval
+pyarrow
+pydeck
+pygments
+pyparsing
+python-dateutil
+pytz
+pyzmq
+referencing
+requests
+rich
+rpds-py
+scikit-learn
+scipy
+six
+scikit-learn
+smmap
+stack-data
 streamlit
+tenacity
+threadpoolctl
+toml
+tornado
+traitlets
+typing-extensions
+tzdata
+urllib3
+watchdog
+wcwidth
+zipp
